--- a/src/components/Section3/Card.astro
+++ b/src/components/Section3/Card.astro
@@ -3,7 +3,7 @@ import Button from "../Button.astro";
 const { url, title, text, button, urlHover } = Astro.props;
 ---
 <div
-    class="relative flex flex-col justify-between bg-white w-[366px] pb-5 overflow-hidden"
+    class="relative flex flex-col justify-between bg-white max-w-[80vw] lg:w-[366px] pb-5 overflow-hidden"
     id="card"
 >
     <div class="flex flex-col items-center">
