--- a/src/components/Section3/Section3.astro
+++ b/src/components/Section3/Section3.astro
@@ -40,8 +40,8 @@ const cards = [
 ];
 ---
 
-<div class="px-geo pb-20" id="cont-principal">
-    <div class="border-[#54574E] border-t-[10px] max-w-[600px] pt-5">
+<div class="lg:px-geo pb-20" id="cont-principal">
+    <div class="border-[#54574E] border-t-[10px] max-w-[600px] pt-5 mx-geo">
         <span
             class="font-nunito uppercase font-black text-[#54574E] text-[1.3rem]"
             >Aventúrate&nbsp;</span
@@ -49,7 +49,7 @@ const cards = [
         <Title title="Atractivos" />
     </div>
 
-    <div class="flex gap-x-10 justify-center pt-10">
+    <div class="flex flex-col lg:flex-row gap-y-10 lg:gap-x-10 justify-center pt-10" id="cardNv">
         {
             cards.map((card) => (
                 <Card
@@ -85,6 +85,15 @@ const cards = [
         </div>
     </div>
 </div>
+
+<style>
+    @media (max-width: 1024px) {
+        #cardNv {
+            align-items: center;
+            margin: 0 1rem;
+        }
+    }
+</style>
 
 <script>
     const resources = {
