style: responsive section 5

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import Footer from '../components/Footer.astro'
 	<Section3 />
 	<Slides client:load/>
 	<SlidesMobile />
-	<!-- <Section5 /> -->
+	<Section5 />
 	<!-- <Section6 /> -->
 	<!-- <Frame /> -->
 	<!-- <Footer /> -->
