--- a/src/components/Section5/Section5.astro
+++ b/src/components/Section5/Section5.astro
@@ -9,14 +9,14 @@ const info = [
 ]
 ---
 
-<div class="flex py-20">
-    <div class="w-5/12">
+<div class="flex flex-col-reverse lg:flex-row py-20">
+    <div class="lg:w-5/12">
         <img src="/foto.webp" class="w-full" alt="foto familia bicicleta">
     </div>
-    <div class="w-2/12 flex items-center">
+    <div class="lg:w-2/12 hidden lg:flex items-center">
         <img src="/ruta.svg" alt="">
     </div>
-    <div class="w-5/12">
+    <div class="px-geo py-[2rem] lg:w-5/12">
         <div class="border-[#B2A89C] border-l-[10px] ps-5 py-5">
             <span class="font-nunito uppercase font-black text-[#54574E] text-[1.3rem]">Descubre el Camino a la Naturaleza</span>
             <Title title="Recorrido" />
