style: reponsive section 6

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import Footer from '../components/Footer.astro'
 	<Slides client:load/>
 	<SlidesMobile />
 	<Section5 />
-	<!-- <Section6 /> -->
+	<Section6 />
 	<!-- <Frame /> -->
 	<!-- <Footer /> -->
 </Layout>
@@ -90,8 +90,6 @@ import Footer from '../components/Footer.astro'
 
 	.swiper-button-prev {
 		background: url("/left.svg") no-repeat;
-		
-
 	}
 
 	.swiper-button-next {
