--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import Footer from '../components/Footer.astro'
 	<SlidesMobile />
 	<Section5 />
 	<Section6 />
-	<!-- <Frame /> -->
+	<Frame />
 	<!-- <Footer /> -->
 </Layout>
 
