--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import Footer from '../components/Footer.astro'
 	<Section5 />
 	<Section6 />
 	<Frame />
-	<!-- <Footer /> -->
+	<Footer />
 </Layout>
 
 <style is:global>
