feat: agrega boton scroll

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -58,8 +58,8 @@ const data = [
                 </div>
             </div>
         </div>
-        <div class="w-screen md:w-1/2 pt-10 flex justify-center md:justify-end items-center">
-            <img src="/logo-footer.webp" class="w-[200px]" alt="">
+        <div class="w-screen md:w-1/2 pt-10 px-geo flex justify-center md:justify-end items-center">
+            <img src="/logo-footer.webp" class="w-[200px] xl:w-[300px]" alt="">
         </div>
     </div>
 </footer>
