--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,7 @@ import Section5 from "../components/Section5/Section5.astro";
 import Section6 from "../components/Section6/Section6.astro";
 import Frame from "../components/Frame.astro";
 import Footer from "../components/Footer.astro";
+import ScrollButton from '../components/ScrollButton.astro';
 ---
 
 <Layout
@@ -29,6 +30,7 @@ import Footer from "../components/Footer.astro";
 	<Section6 />
 	<Frame />
 	<Footer />
+	<ScrollButton />
 </Layout>
 
 <style is:global>
