style: agrega scrol a tag a

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ const data = [
 ]
 ---
 
-<footer class="py-20">
+<footer id="footer" class="py-20">
     <div class="flex flex-col md:px-geo md:flex-row">
         <div class="w-screen md:w-1/2 flex flex-col md:flex-row items-center md:items-start px-geo">
             <div class="w-1/2">
