--- a/src/components/Header/Navbar.astro
+++ b/src/components/Header/Navbar.astro
@@ -34,16 +34,16 @@ import '@fontsource/ropa-sans';
                     <a href="#" class="block py-2 px-3 text-white md:p-0 uppercase" aria-current="page">Inicio</a>
                 </li>
                 <li>
-                    <a href="#" class="block py-2 px-3 text-white md:p-0 uppercase">Ubicación</a>
+                    <a href="#ubicacion" class="block py-2 px-3 text-white md:p-0 uppercase">Ubicación</a>
                 </li>
                 <li>
-                    <a href="#" class="block py-2 px-3 text-white md:p-0 uppercase">Atractivos</a>
+                    <a href="#atractivos" class="block py-2 px-3 text-white md:p-0 uppercase">Atractivos</a>
                 </li>
                 <li>
-                    <a href="#" class="block py-2 px-3 text-white md:p-0 uppercase">Galería 360</a>
+                    <a href="#galeria" class="block py-2 px-3 text-white md:p-0 uppercase">Galería 360</a>
                 </li>
                 <li>
-                    <a href="#" class="block py-2 px-3 text-white md:p-0 uppercase">Contacto</a>
+                    <a href="#footer" class="block py-2 px-3 text-white md:p-0 uppercase">Contacto</a>
                 </li>
             </ul>
         </div>
