--- a/src/components/Section6/Section6.astro
+++ b/src/components/Section6/Section6.astro
@@ -2,11 +2,13 @@
 import Title from '../Title.astro';
 import Slides from './Slides.jsx';
 ---
-<div class="text-center pb-10 flex flex-col items-center">
-    <div class="border-[#4A5E73] border-b-[10px] px-10 mb-10 inline-block">
-        <Title title="Galería" />
+<section id="galeria">
+    <div class="text-center pb-10 flex flex-col items-center">
+        <div class="border-[#4A5E73] border-b-[10px] px-10 mb-10 inline-block">
+            <Title title="Galería" />
+        </div>
+        <div class="max-w-[100vw] xl:max-w-[1500px] flex justify-center items-center max-h-[100vh]">
+            <Slides client:load/>
+        </div>
     </div>
-    <div class="max-w-[100vw] xl:max-w-[1500px] flex justify-center items-center max-h-[100vh]">
-        <Slides client:load/>
-    </div>
-</div>
+</section>
