--- a/src/components/Frame.astro
+++ b/src/components/Frame.astro
@@ -1,10 +1,12 @@
 
-<div class="pt-20 lg:pt-10">
-    <iframe
-        width="100%"
-        height="640"
-        allow="xr-spatial-tracking; gyroscope; accelerometer"
-        allowfullscreen=""
-        src="https://kuula.co/share/5mbwH?logo=1&info=1&fs=1&vr=0&sd=1&thumbs=1"
-    ></iframe>
-</div>
+<section id="imagen360">
+    <div class="pt-20 lg:pt-10">
+        <iframe
+            width="100%"
+            height="640"
+            allow="xr-spatial-tracking; gyroscope; accelerometer"
+            allowfullscreen=""
+            src="https://kuula.co/share/5mbwH?logo=1&info=1&fs=1&vr=0&sd=1&thumbs=1"
+        ></iframe>
+    </div>
+</section>
