--- a/src/components/Section1.astro
+++ b/src/components/Section1.astro
@@ -4,59 +4,60 @@ import Title from "./Title.astro";
 import Gallery from './Gallery.jsx';
 
 ---
-
-<div class="relative flex flex-col lg:flex-row min-h-[90vh] flex-rows lg:overflow-hidden" id="img-section1">
-    <div class="lg:w-1/2 w-screen">
-        <img class="lg:hidden w-screen" src="/section1.png" alt="">
-    </div>
-    <div class="lg:w-1/2 w-screen flex flex-col justify-center">
-        <div id="capa" class="hidden lg:block absolute w-full h-[90vh]"></div>
-        <div class="lg:absolute p-10 w-full" id="title-container">
-            <div class="" id="div2">
-                <div class="max-w-[400px] border-[#83A327] border-l-[10px] p-5" id="title1">
-                    <span
-                        class="font-nunito uppercase font-black text-[#494949] text-[1.3rem]"
-                        >Sumérgete en la&nbsp;</span
-                    >
-                    <span
-                        class="font-nunito uppercase font-black text-[#83A327] text-[1.3rem]"
-                        >experiencia única&nbsp;</span
-                    >
-                    <span
-                        class="font-nunito uppercase font-black text-[#494949] text-[1.3rem]"
-                        >de explorar</span
-                    >
-                    <Title title="Geoturismo Contrafuerte" />
+<section id="informacion">
+    <div class="relative flex flex-col lg:flex-row min-h-[90vh] flex-rows lg:overflow-hidden" id="img-section1">
+        <div class="lg:w-1/2 w-screen">
+            <img class="lg:hidden w-screen" src="/section1.png" alt="">
+        </div>
+        <div class="lg:w-1/2 w-screen flex flex-col justify-center">
+            <div id="capa" class="hidden lg:block absolute w-full h-[90vh]"></div>
+            <div class="lg:absolute p-10 w-full" id="title-container">
+                <div class="" id="div2">
+                    <div class="max-w-[400px] border-[#83A327] border-l-[10px] p-5" id="title1">
+                        <span
+                            class="font-nunito uppercase font-black text-[#494949] text-[1.3rem]"
+                            >Sumérgete en la&nbsp;</span
+                        >
+                        <span
+                            class="font-nunito uppercase font-black text-[#83A327] text-[1.3rem]"
+                            >experiencia única&nbsp;</span
+                        >
+                        <span
+                            class="font-nunito uppercase font-black text-[#494949] text-[1.3rem]"
+                            >de explorar</span
+                        >
+                        <Title title="Geoturismo Contrafuerte" />
+                    </div>
+    
+                    <div class="max-w-[400px] border-[#83A327] border-l-[10px] p-5 hidden" id="title2">
+                        <span
+                            class="font-nunito uppercase font-black text-[#83A327] text-[1.3rem]"
+                            >Geo patrimonio</span
+                        >
+                    </div>
                 </div>
-
-                <div class="max-w-[400px] border-[#83A327] border-l-[10px] p-5 hidden" id="title2">
-                    <span
-                        class="font-nunito uppercase font-black text-[#83A327] text-[1.3rem]"
-                        >Geo patrimonio</span
-                    >
+                <div class="my-5">
+                    <p class="font-nunito font-light pe-5 md:pe-20 lg:pe-5 lg:max-w-[40vw] text-justify" id="description">
+                        El hermoso Valle de Contrafuerte se encuentra distante a 48
+                        km.al Sur-este de la Comuna de Lago Ranco, es un Área
+                        Protegida Privada que cuenta con 3.200 hás., geográficamente
+                        se encuentra colindante al Complejo volcánico Puyehue-Cordón
+                        Caulle por lo que cuenta con un acceso directo al Geo
+                        Patrimonio.Posee un rico ecosistema lleno de biodiversidad
+                        que alberga 56 especies entre aves y mamíferos tales como el
+                        carpintero negro, el Hued-Hued, Chucao ,Martín Pescador,
+                        Puma, el Monito del Monte entre muchos otros.
+                    </p>
                 </div>
-            </div>
-            <div class="my-5">
-                <p class="font-nunito font-light pe-5 md:pe-20 lg:pe-5 lg:max-w-[40vw] text-justify" id="description">
-                    El hermoso Valle de Contrafuerte se encuentra distante a 48
-                    km.al Sur-este de la Comuna de Lago Ranco, es un Área
-                    Protegida Privada que cuenta con 3.200 hás., geográficamente
-                    se encuentra colindante al Complejo volcánico Puyehue-Cordón
-                    Caulle por lo que cuenta con un acceso directo al Geo
-                    Patrimonio.Posee un rico ecosistema lleno de biodiversidad
-                    que alberga 56 especies entre aves y mamíferos tales como el
-                    carpintero negro, el Hued-Hued, Chucao ,Martín Pescador,
-                    Puma, el Monito del Monte entre muchos otros.
-                </p>
-            </div>
-            <Button text="Conoce más" id="conocer-mas" />
-            <Button class="hidden" text="Volver" dir="left" id="volver"/>
-            <div id="gallery" class="hidden">
-                <Gallery client:load />
+                <Button text="Conoce más" id="conocer-mas" />
+                <Button class="hidden" text="Volver" dir="left" id="volver"/>
+                <div id="gallery" class="hidden">
+                    <Gallery client:load />
+                </div>
             </div>
         </div>
     </div>
-</div>
+</section>
 
 <style>
     #img-section1 {
