--- a/src/components/Section2.astro
+++ b/src/components/Section2.astro
@@ -2,43 +2,44 @@
 import Button from "../components/Button.astro";
 import Title from "./Title.astro";
 ---
-
-<div class="flex flex-rows overflow-hidden my-20 lg:px-geo">
-    <div class="flex flex-col-reverse lg:flex-row w-screen">
-        <div class="w-screen px-geo lg:px-0 my-10 lg:my-0 lg:w-1/2">
-            <div class="" id="div2">
-                <div class="max-w-[400px] border-[#83A327] border-l-[10px] p-5">
-                    <span
-                        class="font-nunito uppercase font-black text-[#83A327] text-[1.3rem]"
-                        >Aventúrate&nbsp;</span
-                    >
-                    <span
-                        class="font-nunito uppercase font-black text-[#494949] text-[1.3rem]"
-                        >y déjate llevar por la belleza de la&nbsp;</span
-                    >
-                    <span
-                        class="font-nunito uppercase font-black text-[#83A327] text-[1.3rem]"
-                        >tierra</span
-                    >
-                    <Title title="Ubicación"/>
+<section id="ubicacion">
+    <div class="flex flex-rows overflow-hidden my-20 lg:px-geo">
+        <div class="flex flex-col-reverse lg:flex-row w-screen">
+            <div class="w-screen px-geo lg:px-0 my-10 lg:my-0 lg:w-1/2">
+                <div class="" id="div2">
+                    <div class="max-w-[400px] border-[#83A327] border-l-[10px] p-5">
+                        <span
+                            class="font-nunito uppercase font-black text-[#83A327] text-[1.3rem]"
+                            >Aventúrate&nbsp;</span
+                        >
+                        <span
+                            class="font-nunito uppercase font-black text-[#494949] text-[1.3rem]"
+                            >y déjate llevar por la belleza de la&nbsp;</span
+                        >
+                        <span
+                            class="font-nunito uppercase font-black text-[#83A327] text-[1.3rem]"
+                            >tierra</span
+                        >
+                        <Title title="Ubicación"/>
+                    </div>
+                    <div class="my-5">
+                        <p class="font-nunito font-light max-w-[800px]">
+                            Distancias hacia Geoturismo Contrafuerte:
+                            Futrono 56 kms. - Lago Ranco 48 Kms. - Cruce El Arenal 20 kms. Pocura 10 Kms.
+                            Para alcanzar a realizar la travesía durante el día, hay que llegar temprano, en un vehículo doble tracción para cruzar el vado del río Nilahue.
+                            En el punto central de recepción se entrega información del lugar y del recorrido, luego el visitante continúa la ruta en medio del valle y entre hermosos bosques , siempre subiendo hacia la montaña, en un recorrido de 14 kms . de distancia por un lapso de 1,5 horas aprox. hasta llegar al final del camino que nos acerca al Complejo Volcánico Puyehue- Cordón Caulle.
+                            La panorámica que nos regala la cordillera desde ese lugar es impresionante, desde ahí comienza una placentera caminata hacia el Volcán, fumarolas y el gran campo de lava que se realiza en unas 5 horas ida aprox.
+                        </p>
+                    </div>
                 </div>
-                <div class="my-5">
-                    <p class="font-nunito font-light max-w-[800px]">
-                        Distancias hacia Geoturismo Contrafuerte:
-                        Futrono 56 kms. - Lago Ranco 48 Kms. - Cruce El Arenal 20 kms. Pocura 10 Kms.
-                        Para alcanzar a realizar la travesía durante el día, hay que llegar temprano, en un vehículo doble tracción para cruzar el vado del río Nilahue.
-                        En el punto central de recepción se entrega información del lugar y del recorrido, luego el visitante continúa la ruta en medio del valle y entre hermosos bosques , siempre subiendo hacia la montaña, en un recorrido de 14 kms . de distancia por un lapso de 1,5 horas aprox. hasta llegar al final del camino que nos acerca al Complejo Volcánico Puyehue- Cordón Caulle.
-                        La panorámica que nos regala la cordillera desde ese lugar es impresionante, desde ahí comienza una placentera caminata hacia el Volcán, fumarolas y el gran campo de lava que se realiza en unas 5 horas ida aprox.
-                    </p>
-                </div>
+                <Button text="Ir a Google Maps" />
             </div>
-            <Button text="Ir a Google Maps" />
-        </div>
-        <div class="w-screen lg:w-1/2 items-center justify-center flex" id="img-vol">
-            <img src="/section2-img.webp" class="hidden lg:block" alt="" />
+            <div class="w-screen lg:w-1/2 items-center justify-center flex" id="img-vol">
+                <img src="/section2-img.webp" class="hidden lg:block" alt="" />
+            </div>
         </div>
     </div>
-</div>
+</section>
 
 <style>
     div.flex.flex-rows.overflow-hidden {
