--- a/src/components/Section3/Section3.astro
+++ b/src/components/Section3/Section3.astro
@@ -40,51 +40,53 @@ const cards = [
 ];
 ---
 
-<div class="lg:px-geo pb-20" id="cont-principal">
-    <div class="border-[#54574E] border-t-[10px] max-w-[600px] pt-5 mx-geo">
-        <span
-            class="font-nunito uppercase font-black text-[#54574E] text-[1.3rem]"
-            >Aventúrate&nbsp;</span
-        >
-        <Title title="Atractivos" />
-    </div>
+<section id="atractivos">
+    <div class="lg:px-geo pb-20" id="cont-principal">
+        <div class="border-[#54574E] border-t-[10px] max-w-[600px] pt-5 mx-geo">
+            <span
+                class="font-nunito uppercase font-black text-[#54574E] text-[1.3rem]"
+                >Aventúrate&nbsp;</span
+            >
+            <Title title="Atractivos" />
+        </div>
 
-    <div class="flex flex-col lg:flex-row gap-y-10 lg:gap-x-10 justify-center pt-10" id="cardNv">
-        {
-            cards.map((card) => (
-                <Card
-                    url={card.url}
-                    title={card.title}
-                    text={card.text}
-                    urlHover={card.urlHover}
-                    button={card.button}
-                />
-            ))
-        }
-    </div>
-</div>
-
-<div id='cont-img' class="relative hidden overflow-hidden">
-    <div class="absolute left-0 top-0 w-full h-full">
-        <div class="relative flex justify-center w-full h-full overflow-hidden">
-            <div class="absolute inset-0 bg-gradient-to-r from-black/50 to-transparent z-10"></div>
-            <video class="absolute top-0 left-0 w-full h-full object-cover" muted loop autoplay></video>
-            <div class="absolute pt-10 inset-0 z-20 ">
-                <svg class="px-[3.8rem]" width="498" height="8" viewBox="0 0 498 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="498" y="3.05176e-05" width="8.00002" height="498" transform="rotate(90 498 3.05176e-05)" fill="white"/>
-                </svg>
-                <p class="px-[3.8rem] pt-2 text-white font-nunito uppercase font-semibold">Disfruta diferentes atractivos</p>
-                <h2 class="px-[3.8rem] flex font-radwave text-transparent stroke-1px-white leading-10 sm:leading-[60px] text-[1.2rem] sm:text-[2rem] lg:text-[3rem]" id="img-title"></h2>
-            </div>
-            <button class="absolute bottom-1/2 left-[3.8rem] transform -translate-y-1/2 z-20" id="btn-regresar">
-                <svg width="64" height="60" viewBox="0 0 64 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="63.5" y="59.5" width="63" height="59" rx="29.5" transform="rotate(180 63.5 59.5)" stroke="white"/>
-                    <path d="M40 29L40 31L28 31L33.5 36.5L32.08 37.92L24.16 30L32.08 22.08L33.5 23.5L28 29L40 29Z" fill="white"/>
-                </svg>
-            </button>
+        <div class="flex flex-col lg:flex-row gap-y-10 lg:gap-x-10 justify-center pt-10" id="cardNv">
+            {
+                cards.map((card) => (
+                    <Card
+                        url={card.url}
+                        title={card.title}
+                        text={card.text}
+                        urlHover={card.urlHover}
+                        button={card.button}
+                    />
+                ))
+            }
         </div>
     </div>
-</div>
+
+    <div id='cont-img' class="relative hidden overflow-hidden">
+        <div class="absolute left-0 top-0 w-full h-full">
+            <div class="relative flex justify-center w-full h-full overflow-hidden">
+                <div class="absolute inset-0 bg-gradient-to-r from-black/50 to-transparent z-10"></div>
+                <video class="absolute top-0 left-0 w-full h-full object-cover" muted loop autoplay></video>
+                <div class="absolute pt-10 inset-0 z-20 ">
+                    <svg class="px-[3.8rem]" width="498" height="8" viewBox="0 0 498 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect x="498" y="3.05176e-05" width="8.00002" height="498" transform="rotate(90 498 3.05176e-05)" fill="white"/>
+                    </svg>
+                    <p class="px-[3.8rem] pt-2 text-white font-nunito uppercase font-semibold">Disfruta diferentes atractivos</p>
+                    <h2 class="px-[3.8rem] flex font-radwave text-transparent stroke-1px-white leading-10 sm:leading-[60px] text-[1.2rem] sm:text-[2rem] lg:text-[3rem]" id="img-title"></h2>
+                </div>
+                <button class="absolute bottom-1/2 left-[3.8rem] transform -translate-y-1/2 z-20" id="btn-regresar">
+                    <svg width="64" height="60" viewBox="0 0 64 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect x="63.5" y="59.5" width="63" height="59" rx="29.5" transform="rotate(180 63.5 59.5)" stroke="white"/>
+                        <path d="M40 29L40 31L28 31L33.5 36.5L32.08 37.92L24.16 30L32.08 22.08L33.5 23.5L28 29L40 29Z" fill="white"/>
+                    </svg>
+                </button>
+            </div>
+        </div>
+    </div>
+</section>
 
 <style>
     @media (max-width: 1024px) {
