--- a/src/components/Section5/Section5.astro
+++ b/src/components/Section5/Section5.astro
@@ -8,24 +8,25 @@ const info = [
     {icon: '/icon-vehicle2.svg', title: 'VEHÍCULO CON TRACCIÓN', details: 'Tiempo en subir los 14km:', value: '4X4: 1,5 HRS'}
 ]
 ---
-
-<div class="flex flex-col-reverse lg:flex-row py-20">
-    <div class="lg:w-5/12">
-        <img src="/foto.webp" class="w-full" alt="foto familia bicicleta">
-    </div>
-    <div class="lg:w-2/12 hidden lg:flex items-center">
-        <img src="/ruta.svg" alt="">
-    </div>
-    <div class="px-geo py-[2rem] lg:w-5/12">
-        <div class="border-[#B2A89C] border-l-[10px] ps-5 py-5">
-            <span class="font-nunito uppercase font-black text-[#54574E] text-[1.3rem]">Descubre el Camino a la Naturaleza</span>
-            <Title title="Recorrido" />
-            <div>
-                <p class="font-nunito">Equipo recomendado: Zapatos trekking, botella de agua, gafas protección UV, gorro de sol, bloqueador solar, ración de marcha, linterna, mochila, toalla, traje de baño, poncho de lluvia (opcional).</p>
-                {info.map( info => (
-                    <Info icon={info.icon} title={info.title} details={info.details} value={info.value}/>
-                ))}
+<section id="recorrido">
+    <div class="flex flex-col-reverse lg:flex-row py-20">
+        <div class="lg:w-5/12">
+            <img src="/foto.webp" class="w-full" alt="foto familia bicicleta">
+        </div>
+        <div class="lg:w-2/12 hidden lg:flex items-center">
+            <img src="/ruta.svg" alt="">
+        </div>
+        <div class="px-geo py-[2rem] lg:w-5/12">
+            <div class="border-[#B2A89C] border-l-[10px] ps-5 py-5">
+                <span class="font-nunito uppercase font-black text-[#54574E] text-[1.3rem]">Descubre el Camino a la Naturaleza</span>
+                <Title title="Recorrido" />
+                <div>
+                    <p class="font-nunito">Equipo recomendado: Zapatos trekking, botella de agua, gafas protección UV, gorro de sol, bloqueador solar, ración de marcha, linterna, mochila, toalla, traje de baño, poncho de lluvia (opcional).</p>
+                    {info.map( info => (
+                        <Info icon={info.icon} title={info.title} details={info.details} value={info.value}/>
+                    ))}
+                </div>
             </div>
         </div>
     </div>
-</div>
+</section>
