--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -114,9 +114,9 @@ import ScrollButton from "../components/ScrollButton.astro";
 </style>
 
 <script>
-	import { Ripple, initTWE, ScrollSpy } from "tw-elements";
+	import { Ripple, initTWE, ScrollSpy, Offcanvas } from "tw-elements";
 
-	initTWE({ Ripple, ScrollSpy });
+	initTWE({ Ripple, ScrollSpy, Offcanvas });
 	const mybutton = document.getElementById("btn-back-to-top");
 
 	const scrollFunction = () => {
