--- a/src/components/Section3/Section3.astro
+++ b/src/components/Section3/Section3.astro
@@ -40,7 +40,7 @@ const cards = [
 ];
 ---
 
-<section id="atractivos">
+<section id="atractivos" class="max-w-[2000px] 2xl:mx-auto">
     <div class="lg:px-geo pb-20" id="cont-principal">
         <div class="border-[#54574E] border-t-[10px] max-w-[600px] pt-5 mx-geo">
             <span
