--- a/src/components/Section1.astro
+++ b/src/components/Section1.astro
@@ -4,8 +4,8 @@ import Title from "./Title.astro";
 import Gallery from './Gallery.jsx';
 
 ---
-<section id="informacion">
-    <div class="relative flex flex-col lg:flex-row min-h-[90vh] flex-rows lg:overflow-hidden" id="img-section1">
+<section id="informacion" class="max-h-[1000px]">
+    <div class="relative flex flex-col lg:flex-row min-h-[90vh] flex-rows lg:overflow-hidden 2xl:min-h-[1000px]" id="img-section1">
         <div class="lg:w-1/2 w-screen">
             <img class="lg:hidden w-screen" src="/section1.png" alt="">
         </div>
