--- a/src/components/Section2.astro
+++ b/src/components/Section2.astro
@@ -2,7 +2,7 @@
 import Button from "../components/Button.astro";
 import Title from "./Title.astro";
 ---
-<section id="ubicacion">
+<section id="ubicacion" class="max-w-[2000px] 2xl:mx-auto">
     <div class="flex flex-rows overflow-hidden my-20 lg:px-geo">
         <div class="flex flex-col-reverse lg:flex-row w-screen">
             <div class="w-screen px-geo lg:px-0 my-10 lg:my-0 lg:w-1/2">
