--- a/src/components/Section5/Section5.astro
+++ b/src/components/Section5/Section5.astro
@@ -8,7 +8,7 @@ const info = [
     {icon: '/icon-vehicle2.svg', title: 'VEHÍCULO CON TRACCIÓN', details: 'Tiempo en subir los 14km:', value: '4X4: 1,5 HRS'}
 ]
 ---
-<section id="recorrido">
+<section id="recorrido" class="max-w-[2000px] 2xl:mx-auto">
     <div class="flex flex-col-reverse lg:flex-row py-20">
         <div class="lg:w-5/12">
             <img src="/foto.webp" class="w-full" alt="foto familia bicicleta">
