fix: responsive general

--- a/src/components/Section3/Section3.astro
+++ b/src/components/Section3/Section3.astro
@@ -44,7 +44,7 @@ const cards = [
     <div class="lg:px-geo pb-20" id="cont-principal">
         <div class="border-[#54574E] border-t-[10px] max-w-[600px] pt-5 mx-geo">
             <span
-                class="font-nunito uppercase font-black text-[#54574E] text-[1.3rem]"
+                class="font-nunito uppercase font-black text-[#54574E] text-[1rem] md:text-[1.3rem]"
                 >Aventúrate&nbsp;</span
             >
             <Title title="Atractivos" />
