--- a/src/components/Section5/Section5.astro
+++ b/src/components/Section5/Section5.astro
@@ -18,7 +18,7 @@ const info = [
         </div>
         <div class="px-geo py-[2rem] lg:w-6/12">
             <div class="border-[#B2A89C] border-l-[10px] ps-5 py-5">
-                <span class="font-nunito uppercase font-black text-[#54574E] text-[1.3rem]">Descubre el Camino a la Naturaleza</span>
+                <span class="font-nunito uppercase font-black text-[#54574E] text-[1rem] md:text-[1.3rem]">Descubre el Camino a la Naturaleza</span>
                 <Title title="Recorrido" />
                 <div>
                     <p class="font-nunito">Equipo recomendado: Zapatos trekking, botella de agua, gafas protección UV, gorro de sol, bloqueador solar, ración de marcha, linterna, mochila, toalla, traje de baño, poncho de lluvia (opcional).</p>
