--- a/src/components/Section1.astro
+++ b/src/components/Section1.astro
@@ -14,24 +14,24 @@ import Gallery from './Gallery.jsx';
             <div class="lg:absolute p-10 w-full" id="title-container">
                 <div class="" id="div2">
                     <div class="max-w-[400px] border-[#83A327] border-l-[10px] p-5" id="title1">
-                        <span
-                            class="font-nunito uppercase font-black text-[#494949] text-[1.3rem]"
-                            >Sumérgete en la&nbsp;</span
+                        <p
+                            class="font-nunito uppercase font-black text-[#494949] text-[1rem] md:text-[1.3rem]"
+                            >Sumérgete en la&nbsp;</p
                         >
-                        <span
-                            class="font-nunito uppercase font-black text-[#83A327] text-[1.3rem]"
-                            >experiencia única&nbsp;</span
+                        <p
+                            class="font-nunito uppercase font-black text-[#83A327] text-[1rem] md:text-[1.3rem]"
+                            >experiencia única&nbsp;</p
                         >
-                        <span
-                            class="font-nunito uppercase font-black text-[#494949] text-[1.3rem]"
-                            >de explorar</span
+                        <p
+                            class="font-nunito uppercase font-black text-[#494949] text-[1rem] md:text-[1.3rem]"
+                            >de explorar</p
                         >
                         <Title title="Geoturismo Contrafuerte" />
                     </div>
     
                     <div class="max-w-[400px] border-[#83A327] border-l-[10px] p-5 hidden" id="title2">
                         <span
-                            class="font-nunito uppercase font-black text-[#83A327] text-[1.3rem]"
+                            class="font-nunito uppercase font-black text-[#83A327] text-[1rem] md:text-[1.3rem]"
                             >Geo patrimonio</span
                         >
                     </div>
