--- a/src/components/Section2.astro
+++ b/src/components/Section2.astro
@@ -2,22 +2,22 @@
 import Button from "../components/Button.astro";
 import Title from "./Title.astro";
 ---
-<section id="ubicacion" class="max-w-[2000px] 2xl:mx-auto">
+<section id="ubicacion" class="max-w-[2000px] 2xl:m-x-auto">
     <div class="flex flex-rows overflow-hidden my-20 lg:px-geo">
         <div class="flex flex-col-reverse lg:flex-row w-screen">
             <div class="w-screen px-geo lg:px-0 my-10 lg:my-0 lg:w-1/2">
                 <div class="" id="div2">
                     <div class="max-w-[400px] border-[#83A327] border-l-[10px] p-5">
                         <span
-                            class="font-nunito uppercase font-black text-[#83A327] text-[1.3rem]"
+                            class="font-nunito uppercase font-black text-[#83A327] text-[1rem] md:text-[1.3rem]"
                             >Aventúrate&nbsp;</span
                         >
                         <span
-                            class="font-nunito uppercase font-black text-[#494949] text-[1.3rem]"
+                            class="font-nunito uppercase font-black text-[#494949] text-[1rem] md:text-[1.3rem]"
                             >y déjate llevar por la belleza de la&nbsp;</span
                         >
                         <span
-                            class="font-nunito uppercase font-black text-[#83A327] text-[1.3rem]"
+                            class="font-nunito uppercase font-black text-[#83A327] text-[1rem] md:text-[1.3rem]"
                             >tierra</span
                         >
                         <Title title="Ubicación"/>
