fix: ruta galeria

--- a/src/components/Header/Navbar.astro
+++ b/src/components/Header/Navbar.astro
@@ -61,7 +61,7 @@ import "@fontsource/ropa-sans";
                 </li>
                 <li>
                     <a
-                        href="#galeria"
+                        href="#imagen360"
                         class="block py-2 px-3 text-white md:p-0 uppercase"
                         >Galería 360</a
                     >
@@ -120,7 +120,7 @@ import "@fontsource/ropa-sans";
                 >
             </li>
             <li>
-                <a href="#galeria" class="block py-2 uppercase text-white text-700"
+                <a href="#imagen360" class="block py-2 uppercase text-white text-700"
                     >Galería 360</a
                 >
             </li>
